--- a/test.html
+++ b/test.html
@@ -1,1 +1,4 @@
-https://cors-anywhere.herokuapp.com/dss-fdmi-prod-01.global.standardchartered.com:3999/public/api/v1/API_JS/JS/run
+ var cors_api_url = 'https://cors-anywhere.herokuapp.com/';
+var general_url = 'http://dss-fdmi-prod-01.global.standardchartered.com:3999/public/api/v1/API_JS/JS/run';
+
+cors_api_url + general_url;
